tests/fixtures/invalid/duplicate-entity-names.bprint
{
  "schemaVersion": "v1",
  "namespace": "acme.orders",
  "entities": [
    {
      "name": "Order",
      "primaryKey": { "partitionKey": "orderId" },
      "fields": [
        { "name": "orderId", "type": "string", "required": true }
      ]
    },
    {
      "name": "Order",
      "primaryKey": { "partitionKey": "orderNumber" },
      "fields": [
        { "name": "orderNumber", "type": "string", "required": true }
      ]
    }
  ]
}
